# choretracker

./: .env.example  .gitignore  README.md  alembic.ini  compose.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  auth_cookies.py  dependencies.py  health.py  households.py  readiness.py
backend/app/core/: config.py  passwords.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/domain/households/: service.py
backend/app/domain/identity/: authentication.py  credentials.py  login.py  sessions.py  (+2 more)
backend/app/models/: __init__.py  household.py  household_membership.py  user.py  user_credential.py  user_session.py
backend/app/schemas/: auth.py  households.py
backend/migrations/: env.py
backend/migrations/versions/: 4d2a7ba2d49e_create_users_table.py  60b61d9330f2_create_initial_schema_baseline.py  9d8aadccb81c_create_user_sessions_table.py  eb9fcd819ee7_create_user_credentials_table.py  f74a10104974_create_households_and_memberships.py
backend/tests/: test_auth_hardening_api.py  test_auth_login_api.py  test_auth_logout_api.py  test_auth_me_api.py  test_authentication_service.py  test_config.py  test_credential_service.py  test_database.py  test_health.py  test_household_service.py  test_households_api.py  test_login_service.py  test_migrations.py  test_model_base.py  test_passwords.py  test_project_setup.py  test_readiness.py  test_session_service.py  test_user_credential_model.py  test_user_model.py  test_user_persistence.py  test_user_service.py  test_user_session_model.py  test_usernames.py
scripts/: check.sh  format.sh
