[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "choretracker"
version = "0.1.0"
description = "A demonstration household chore and simulated allowance application."
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic",
  "fastapi",
  "psycopg[binary]",
  "pwdlib[argon2]",
  "pydantic-settings",
  "sqlalchemy",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
